--- a/eyeTracker.html
+++ b/eyeTracker.html
@@ -3,19 +3,45 @@
     <head>
         <!--we got a tab name-->
         <title>Beware</title>
-        <body>
+        <body id="bigbody">
             <div id="main">
                 <div id="left"></div>
                 <div id="right"></div>
             </div>
             <div id="circle"></div>
            <div id="twocirc"></div>
+           <a href="home.html"><button id="lights">Take me home!</button></a>
+           <a href="https://www.youtube.com/watch?v=ZZ5LpwO-An4"><button id="roll">Click Me!</button></a>
+           <button id="backon" onclick="lightswitch()">Turn them back on!</button>
 
            <div id="text">Test</div>
           </body>
 
     </head>
     <style>
+        #backon{
+            position: absolute;
+            left: 150px;
+            top: 1%;
+            border-radius: 2px;
+            border: 2px solid white;
+        }
+
+        #lights{
+            position: absolute;
+            left: 1%;
+            top: 1%;
+            border-radius: 2px;
+            border: 2px solid white;
+        }
+
+        #roll{
+            position: absolute;
+            left: 1%;
+            top: 5%;
+            border-radius: 2px;
+            border: 2px solid white;
+        }
 
         #text{
             position:absolute;
@@ -37,12 +63,12 @@
             left: 43.5%;
             top: 50%;
             transform:translate(-50%,-50%);
-            height:35px;
-            width:35px;
+            height:50px;
+            width:50px;
             background-color: black;
             border-radius:50%;
             border:2px solid black;
-            animation : 2s pulsate infinite;
+           /* animation : 2s pulsate infinite; */
         }
         @keyframes pulsate {
             50%{ border: 5px solid red;}
@@ -52,12 +78,12 @@
             left: 56.5%;
             top: 50%;
             transform:translate(-50%,-50%);
-            height:35px;
-            width:35px;
+            height:50px;
+            width:50px;
             background-color: black;
             border-radius:50%;
             border:2px solid black;
-            animation : 2s pulsate infinite;
+           /* animation : 2s pulsate infinite; */
         }
         #main{
             transform: translate(-50%, -50%);
@@ -67,7 +93,7 @@
             display: block;
             width: fit-content;
             margin: auto;
-            border: 2px solid black;
+            /* border: 2px solid black; */
 
         }
         #left{
@@ -75,7 +101,7 @@
             height:250px;
             width:250px;
             border-radius:50%;
-            border:2px solid white;
+            border:2px solid black;
             background: white;
         }
         #right{
@@ -83,7 +109,7 @@
             height:250px;
             width:250px;
             border-radius:50%;
-            border:2px solid white;
+            border:2px solid black;
             background: white;
         }
 
@@ -138,8 +164,53 @@ const onMouseMove = (e) =>{
     loger.style.left = e.pageX + 'px';
     loger.style.top = e.pageY + 50 + 'px';
     loger.textContent = "x: " + e.pageX + "\n y: " + e.pageY;
+}
+
+let clicker = document.getElementById('roll');
+let moved = 0;
+function clickIt(){
+    switch (moved){
+        case 0:
+            clicker.style.left = 5 + "%";
+            break;
+        case 1:
+            clicker.style.left = 10 + "%";
+            break;
+        case 2:
+            clicker.style.top = 10 + "%";
+            break;
+        case 3:
+            clicker.style.top = 5 + "%";
+            break;
+        case 4:
+            clicker.style.left = 1 + "%";
+            break;
+        case 5:
+            clicker.style.left = 50 + "%";
+            clicker.style.top = 70 + "%";
+            break;
+        default:
+            clicker.style.left = 1 + "%";
+            clicker.style.top = 5 + "%";
+            break;
+    }
+    moved++;
+}
+
+let onOff = false;
+function lightswitch(){
+    if(!onOff){
+        document.body.style.backgroundColor = "white";
+        onOff = true;
+    }
+    else{
+        document.body.style.backgroundColor = "black";
+        onOff = false;
+    }
 
 }
+
 document.addEventListener('mousemove', onMouseMove);
+clicker.addEventListener('mouseover', clickIt);
     </script>
     
