--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <title> My Resume </title>
 <body>
     <div id="topper">
-    <header><h1><div id="look">Please Hire Me</div></h1></header>
+    <header><h1><div id="look"><a id="reroll" href="index.html">Please Hire Me</a></div></h1></header>
     <a href="eyeTracker.html"><button id="lights">Turn off the lights!</button></a>
     <nav>
         <table>
             <tr>
                 <th><a href="home.html">Home</a></th>
-                <th><a href="#">Skills</a></th>
-                <th><a href="#">Projects</a></th>
-                <th><a href="#">Work</a></th>
-                <th><a href="#">About Me</a></th>
-                <th><a href="index.html">Contact Me</a></th>
+                <th><a href="skills.html">Skills</a></th>
+                <th><a href="projects.html">Projects</a></th>
+                <th><a href="work.html">Work</a></th>
+                <th><a href="about.html">About Me</a></th>
+                <th><a href="contact.html">Contact Me</a></th>
             </tr>
         </table>
     </nav>
