Updates and intros
--Changed Lorem Ipsum to something else, but I still can't be serious since I'm so bad at talking about myself

--Changed picture to a regrettable one of myself as drunk trashy gandalf

--Changed the font size and style to better fit the page

--Added image grid for skills page

--Added github link on projects and contact me page

--Added transition delay on click me button to make it smoother

--Added footer to all pages begging for money that I will link to paypal probably

--- a/projects.html
+++ b/projects.html
@@ -19,9 +19,11 @@
         </table>
     </nav>
 </div>
+
+<div style="width: 100%; text-align: center;"><a href="https://github.com/Quinsari"><img style="width: 5%;" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg" /></a></div>
 </body>
 <footer>
-    
+    <div>SEND ME MONEY AND STUFF YOU KNOW YOU WANT TO</div> 
 </footer>
 <script>
 </script>
