--- a/eyeTracker.html
+++ b/eyeTracker.html
@@ -55,6 +55,7 @@
             border-radius: 2px;
             border: 2px solid white;
             z-index: 2;
+            transition: 0.1s linear;
         }
 
         #text{
