--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
 </div>
 
-    <div id="ipsum"> <img id="yeeman" src="Grandalf the Drunk.jpg" width="10%" alt="Cool dude" align="left" style="margin: 10px; border: 3px double black;">
+    <div id="ipsum"> <img id="yeeman" src="Grandalf the Drunk.jpg" width="215px" alt="Cool dude" align="left" style="margin: 10px; border: 3px double black;">
     <br/> My name is Charles Smith and I would love for you to hire me for [INSERT JOB HERE]! <br/>
     <br/>
     I have several important skills to function the best in this job such as communication, willingness to learn, and [JOB SPECIFIC SKILL]. If you don't believe me then take a look at my skills
