Work "History" and more form stuff

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="home.css">
 <link rel="stylesheet" href="contact.css">
+<link rel="script" href="contact.js">
 <meta charset =" utf-8">
 <title> My Resume </title>
 <body>
@@ -22,7 +23,7 @@
 </div>
 
 
-<form name="contactSignup" onsubmit="validateForm()" method="post" id="formField">
+<form name="contactSignup" method="post" id="formField">
     <div class="formpiece">
         <label for="uName">Name </label><br/>
         <input type="text" name="uName">
