--- a/work.html
+++ b/work.html
@@ -19,6 +19,23 @@
         </table>
     </nav>
 </div>
+
+<div style="font-size:xx-large; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; text-align: center;">
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    
+    404 WORK HISTORY NOT FOUND
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    HIRE ME IF YOU WISH TO CHANGE THAT
+</div>
 </body>
 <footer>
     <div>SEND ME MONEY AND STUFF YOU KNOW YOU WANT TO</div>
